idf_component_register(
    SRCS
        "main.c"
        "os/os_alarm.c"
        "os/os.c"
        "lcd/lcd.c"
        "wifi/wifi.c"
        "gateway/ws_server.c"
        "bus/message_bus.c"
        "agent/agent_loop.c"
        "llm/llm_proxy.c"
    INCLUDE_DIRS
        "."
        "os"
        "lcd"
        "wifi"
        "gateway"
        "bus"
        "agent"
        "llm"
    REQUIRES
        lvgl
        esp_wifi
        esp_netif
        nvs_flash
        esp_http_server
        esp_http_client
        esp-tls
        mbedtls
)

add_compile_definitions(LV_CONF_INCLUDE_SIMPLE)